# python-fastAPI

./: README.md  mastermind.py  pyproject.toml  yes_no_game.py
app/: main.py
app/api/: health.py  routes.py
app/core/: config.py
tests/: test_health.py
